--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "@waves/node-api-js",
+  "name": "@decentralchain/node-api-js",
   "version": "1.2.5-beta.17",
   "main": "cjs/index.js",
   "types": "cjs/index.d.ts",
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "testCommand": "jest",
     "prepare": "npm run build",
@@ -55,7 +58,7 @@
   "devDependencies": {
     "@types/jest": "^26.0.23",
     "@waves/node-state": "0.1.0",
-    "@waves/waves-transactions": "^4.1.8",
+    "@decentralchain/waves-transactions": "4.2.3",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.6",
     "ts-loader": "^7.0.5",
