--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@decentralchain/node-api-js",
-  "version": "1.2.5-beta.17",
+  "version": "1.2.5-beta.18",
   "main": "cjs/index.js",
   "types": "cjs/index.d.ts",
   "publishConfig": {
@@ -57,7 +57,7 @@
   },
   "devDependencies": {
     "@types/jest": "^26.0.23",
-    "@waves/node-state": "0.1.0",
+    "@decentralchain/node-state": "0.1.0",
     "@decentralchain/waves-transactions": "4.2.3",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.6",
